--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~46.0.9",
+    "expo-gl": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "three": "^0.144.0",
+    "@react-three/fiber": "8.0.0-beta.10",
+    "@react-three/drei": "^9.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
